--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'Authorization': `Bearer YOUR_DEEPSEEK_API_KEY`
+                    'Authorization': `Bearer sk-848768379fcf4e489197dfd71e81fe09`
                 },
                 body: JSON.stringify({
                     model: "deepseek-coder",
