--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     <script>
         // GitHub OAuth
         document.getElementById('github-login').addEventListener('click', () => {
-            const clientId = 'YOUR_GITHUB_OAUTH_CLIENT_ID';
+            const clientId = 'Ov23liLYlKYLZB9ljBsT';
             const redirectUri = encodeURIComponent(window.location.origin);
             window.location = `https://github.com/login/oauth/authorize?client_id=${clientId}&redirect_uri=${redirectUri}&scope=repo`;
         });
